# Ethernet-Bootloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Firmware/: .cproject  .mxproject  Bootloader Debug.launch  Bootloader.ioc  STM32F417VGTX_FLASH.ld  STM32F417VGTX_RAM.ld  makefile.targets
Firmware/AppAbi/: app_api.h  app_image.h
Firmware/Application/: CMakeLists.txt  Makefile  app_linker.ld  package_app.py
Firmware/Application/Inc/: app_config.h
Firmware/Application/Src/: app_main.c
Firmware/Boot/Inc/: boot_app_manager.h  boot_fault.h  boot_flash.h  boot_flash_resident.h  boot_iap.h  boot_iap_payload.h  boot_image.h  boot_kv_nodes.h  boot_memory_map.h  boot_metadata.h  boot_sha1.h
Firmware/Boot/Src/: boot_app_manager.c  boot_fault.c  boot_flash.c  boot_flash_resident.c  boot_iap.c  boot_iap_payload.c  boot_image.c  boot_memory_map.c  boot_metadata.c  boot_sha1.c
Firmware/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Firmware/Core/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c
Firmware/IapApp/: CMakeLists.txt  Makefile  app_linker.ld  package_app.py
Firmware/IapApp/Inc/: app_config.h
Firmware/IapApp/Src/: app_main.c
Firmware/LWIP/App/: lwip.c
Firmware/Protocol/Inc/: proto_common.h  proto_control_udp.h  proto_discovery_udp.h  proto_program_tcp.h
Firmware/Protocol/Src/: proto_control_udp.c  proto_discovery_udp.c  proto_program_tcp.c
Firmware/Resident/Inc/: resident_api.h  resident_device_tree.h  resident_hardware.h  resident_led.h  resident_main.h  resident_network.h  resident_program_manager.h  resident_security.h  resident_text.h  resident_tree_app.h  (+6 more)
cmake/: arm-none-eabi-toolchain.cmake  ccmram_app.cmake
docs/: README.md  commands.md  device-tree.md  discovery.md  firmware.md  programming.md
docs/plans/: appapi_call_gateway.md  bootloader_self_update_iap_plan.md  device_tree_list_paging_plan.md  multi_nic_discovery_failover_plan.md  programming_plan.md  raw_kv_refactor.md
tools/: bootloader_cli.py  build_debug_app.ps1  dummy_app.hex  pack_boot_payload.py  test_control_tree.py  test_discovery.py
(+15 files in other folders)
